--- a/index.html
+++ b/index.html
@@ -7,15 +7,35 @@
         {
             "imports": {
               "three": "https://unpkg.com/three/build/three.module.js",
-              "three/examples/jsm/loaders/FBXLoader": "https://unpkg.com/three/examples/jsm/loaders/FBXLoader.js"
+              "three/examples/jsm/loaders/FBXLoader": "https://unpkg.com/three/examples/jsm/loaders/FBXLoader.js",
+              "three/examples/jsm/loaders/GLTFLoader": "https://unpkg.com/three/examples/jsm/loaders/GLTFLoader.js",
+              "three/examples/jsm/controls/PointerLockControls": "https://unpkg.com/three/examples/jsm/controls/PointerLockControls.js"
             }
           }
     </script>
     <style>
-        html,
         body {
-            margin: 0;
+            overflow: hidden;
+            margin: 0px;
+        }
+
+        #menuPanel {
+            position: absolute;
+            background-color: rgba(255, 255, 255, 0.5);
+            top: 0px;
+            left: 0px;
+            width: 100%;
             height: 100%;
+        }
+
+        #startButton {
+            height: 50px;
+            width: 200px;
+            margin: -25px -100px;
+            position: relative;
+            top: 50%;
+            left: 50%;
+            font-size: 32px;
         }
 
         #c {
@@ -27,7 +47,9 @@
 </head>
 
 <body>
-    <canvas id="c"></canvas>
+    <div id="menuPanel">
+        <button id="startButton">Click to Start</button>
+    </div>
 </body>
 <script type="module" src="app.js"></script>
 
