--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         {
             "imports": {
                 "three": "https://unpkg.com/three/build/three.module.js",
-                "three/examples/jsm/math/Octree": "./jsm/math/Octree.js",
-                "three/examples/jsm/math/Capsule": "./jsm/math/Capsule.js",
+                "three/examples/jsm/math/Octree": "https://unpkg.com/three/examples/jsm/math/Octree.js",
+                "three/examples/jsm/math/Capsule": "https://unpkg.com/three/examples/jsm/math/Capsule.js",
                 "three/examples/jsm/loaders/FBXLoader": "https://unpkg.com/three/examples/jsm/loaders/FBXLoader.js",
                 "three/examples/jsm/loaders/GLTFLoader": "https://unpkg.com/three/examples/jsm/loaders/GLTFLoader.js",
                 "three/examples/jsm/controls/PointerLockControls": "https://unpkg.com/three/examples/jsm/controls/PointerLockControls.js"
