--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
         <button id="startButton">Click to Start</button>
     </div>
 </body>
-<script type="module" src="app.js"></script>
+<script type="module" src="./app.js"></script>
 
 </html>
