--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
                 "three/examples/jsm/math/Capsule": "https://unpkg.com/three/examples/jsm/math/Capsule.js",
                 "three/examples/jsm/loaders/FBXLoader": "https://unpkg.com/three/examples/jsm/loaders/FBXLoader.js",
                 "three/examples/jsm/loaders/GLTFLoader": "https://unpkg.com/three/examples/jsm/loaders/GLTFLoader.js",
-                "three/examples/jsm/controls/PointerLockControls": "https://unpkg.com/three/examples/jsm/controls/PointerLockControls.js"
+                "three/examples/jsm/controls/PointerLockControls": "https://unpkg.com/three/examples/jsm/controls/PointerLockControls.js",
+                "./PorchLight": "./PorchLight.js"
             }
           }
     </script>
