--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 
 <head>
     <title>WebGL - Importação de Objetos</title>
@@ -12,21 +12,24 @@
                 "three/examples/jsm/loaders/FBXLoader": "https://unpkg.com/three/examples/jsm/loaders/FBXLoader.js",
                 "three/examples/jsm/loaders/GLTFLoader": "https://unpkg.com/three/examples/jsm/loaders/GLTFLoader.js",
                 "three/examples/jsm/controls/PointerLockControls": "https://unpkg.com/three/examples/jsm/controls/PointerLockControls.js",
-                "./PorchLight": "./PorchLight.js"
+                "./objects": "./objects.js",
+                "./World": "./World.js"
             }
           }
+
+
     </script>
     <style>
         body {
             overflow: hidden;
-            margin: 0px;
+            margin: 0;
         }
 
         #menuPanel {
             position: absolute;
             background-color: rgba(255, 255, 255, 0.5);
-            top: 0px;
-            left: 0px;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
         }
@@ -41,18 +44,13 @@
             font-size: 32px;
         }
 
-        #c {
-            width: 100%;
-            height: 100%;
-            display: block;
-        }
     </style>
 </head>
 
 <body>
-    <div id="menuPanel">
-        <button id="startButton">Click to Start</button>
-    </div>
+<div id="menuPanel">
+    <button id="startButton">Click to Start</button>
+</div>
 </body>
 <script type="module" src="./app.js"></script>
 
