--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="pt">
 
 <head>
-    <title>WebGL - Importação de Objetos</title>
+    <meta charset="UTF-8">
+    <title>CG Project</title>
     <script type="importmap">
         {
             "imports": {
