House built from scratch

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                 "three/examples/jsm/loaders/FBXLoader": "https://unpkg.com/three/examples/jsm/loaders/FBXLoader.js",
                 "three/examples/jsm/loaders/GLTFLoader": "https://unpkg.com/three/examples/jsm/loaders/GLTFLoader.js",
                 "three/examples/jsm/controls/PointerLockControls": "https://unpkg.com/three/examples/jsm/controls/PointerLockControls.js",
-                "./objects": "./objects.js",
-                "./World": "./World.js"
+                "objects": "./js/objects.js",
+                "World": "./js/World.js"
             }
           }
 
@@ -53,6 +53,6 @@
     <button id="startButton">Click to Start</button>
 </div>
 </body>
-<script type="module" src="./app.js"></script>
+<script type="module" src="./js/app.js"></script>
 
 </html>
