--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 "three/examples/jsm/math/Octree": "https://unpkg.com/three/examples/jsm/math/Octree.js",
                 "three/examples/jsm/math/Capsule": "https://unpkg.com/three/examples/jsm/math/Capsule.js",
                 "three/examples/jsm/loaders/GLTFLoader": "https://unpkg.com/three/examples/jsm/loaders/GLTFLoader.js",
+                "three/examples/jsm/loaders/FBXLoader": "https://unpkg.com/three/examples/jsm/loaders/FBXLoader.js",
                 "three/examples/jsm/controls/PointerLockControls": "https://unpkg.com/three/examples/jsm/controls/PointerLockControls.js",
                 "three-csg-ts": "https://unpkg.com/three-csg-ts/lib/esm/index.js",
                 "objects": "./js/objects.js",
