--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt">
-
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>CG Project</title>
-    <script type="importmap">
+	<meta charset="UTF-8">
+	<title>CG Project</title>
+	<script type="importmap">
         {
             "imports": {
                 "three": "https://unpkg.com/three/build/three.module.js",
@@ -17,43 +16,38 @@
                 "objects": "./js/objects.js",
                 "World": "./js/World.js"
             }
-          }
-
-
-    </script>
-    <style>
-        body {
-            overflow: hidden;
-            margin: 0;
         }
+	</script>
+	<style>
+		body {
+			overflow: hidden;
+			margin: 0;
+		}
 
-        #menuPanel {
-            position: absolute;
-            background-color: rgba(255, 255, 255, 0.5);
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
+		#menuPanel {
+			position: absolute;
+			background-color: rgba(255, 255, 255, 0.5);
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
 
-        #startButton {
-            height: 50px;
-            width: 200px;
-            margin: -25px -100px;
-            position: relative;
-            top: 50%;
-            left: 50%;
-            font-size: 32px;
-        }
-
-    </style>
+		#startButton {
+			height: 50px;
+			width: 200px;
+			margin: -25px -100px;
+			position: relative;
+			top: 50%;
+			left: 50%;
+			font-size: 32px;
+		}
+	</style>
 </head>
-
 <body>
 <div id="menuPanel">
-    <button id="startButton">Click to Start</button>
+	<button id="startButton">Click to Start</button>
 </div>
 </body>
-<script type="module" src="./js/app.js"></script>
-
+<script src="./js/app.js" type="module"></script>
 </html>
