--- a/index.html
+++ b/index.html
@@ -14,43 +14,19 @@
                 "three/examples/jsm/loaders/FBXLoader": "https://unpkg.com/three/examples/jsm/loaders/FBXLoader.js",
                 "three/examples/jsm/controls/PointerLockControls": "https://unpkg.com/three/examples/jsm/controls/PointerLockControls.js",
                 "three-csg-ts": "https://unpkg.com/three-csg-ts/lib/esm/index.js",
-                "objects": "./js/objects.js",
-                "World": "./js/World.js"
+                "objects": "/src/js/objects.js",
+                "World": "/src/js/World.js"
             }
         }
 	</script>
-	<style>
-		body {
-			overflow: hidden;
-			margin: 0;
-		}
-
-		#menuPanel {
-			position: absolute;
-			background-color: rgba(255, 255, 255, 0.5);
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-		}
-
-		#startButton {
-			height: 50px;
-			width: 200px;
-			margin: -25px -100px;
-			position: relative;
-			top: 50%;
-			left: 50%;
-			font-size: 32px;
-		}
-	</style>
+	<style src="src/css/style.css"></style>
 </head>
 
 <body>
-<div id="menuPanel">
-	<button id="startButton">Click to Start</button>
-</div>
+	<div id="menuPanel">
+		<button id="startButton">Click to Start</button>
+	</div>
 </body>
-<script src="./js/app.js" type="module"></script>
+<script src="src/js/app.js" type="module"></script>
 
 </html>
